--- a/LetCode/LetCode/LetCode.vcxproj
+++ b/LetCode/LetCode/LetCode.vcxproj
@@ -151,6 +151,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Code_1.h" />
+    <ClInclude Include="Code_1222.h" />
+    <ClInclude Include="Code_167.h" />
+    <ClInclude Include="Code_2.h" />
+    <ClInclude Include="Code_274.h" />
+    <ClInclude Include="Code_3.h" />
+    <ClInclude Include="Code_66.h" />
+    <ClInclude Include="Code_863.h" />
+    <ClInclude Include="Define.h" />
+    <ClInclude Include="LCP_Code_1.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
