--- a/LetCode/LetCode/LetCode.vcxproj
+++ b/LetCode/LetCode/LetCode.vcxproj
@@ -157,8 +157,16 @@
     <ClInclude Include="Code_2.h" />
     <ClInclude Include="Code_274.h" />
     <ClInclude Include="Code_3.h" />
+    <ClInclude Include="Code_375.h" />
+    <ClInclude Include="Code_492.h" />
+    <ClInclude Include="Code_516.h" />
+    <ClInclude Include="Code_62.h" />
     <ClInclude Include="Code_66.h" />
+    <ClInclude Include="Code_693.h" />
+    <ClInclude Include="Code_747.h" />
+    <ClInclude Include="Code_86.h" />
     <ClInclude Include="Code_863.h" />
+    <ClInclude Include="Code_921.h" />
     <ClInclude Include="Define.h" />
     <ClInclude Include="LCP_Code_1.h" />
     <ClInclude Include="pch.h" />
