--- a/LetCode/LetCode/LetCode.vcxproj.filters
+++ b/LetCode/LetCode/LetCode.vcxproj.filters
@@ -72,6 +72,12 @@
     <ClInclude Include="Code_747.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Code_345.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Code_101.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
